src/Apttus Contract Management/objects/AgreementActionCondition__c.object
<CustomObject>
    <description>Represents conditions to enable agreement actions</description>
    <fields>
        <fullName>Activate__c</fullName>
        <description>Indicator to activate the agreement</description>
        <formula>OR(ISPICKVAL(AgreementId__r.Status_Category__c,&quot;In Signatures&quot;), ISPICKVAL(AgreementId__r.Status_Category__c,&quot;In Filing&quot;), AND(ISPICKVAL(AgreementId__r.Status_Category__c,&quot;In Authoring&quot;),ISPICKVAL(AgreementId__r.Source__c,&quot;Other Party Paper&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicator to activate the agreement</inlineHelpText>
        <label>Activate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AgreementId__c</fullName>
        <description>ID of the associated agreement</description>
        <inlineHelpText>ID of the associated agreement</inlineHelpText>
        <label>Agreement</label>
        <referenceTo>APTS_Agreement__c</referenceTo>
        <relationshipLabel>Action Conditions</relationshipLabel>
        <relationshipName>ActionConditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Amend__c</fullName>
        <description>Indicator to amend the agreement</description>
        <formula>OR(AND(ISPICKVAL(AgreementId__r.Status_Category__c,&quot;In Effect&quot;),NOT(ISPICKVAL(AgreementId__r.Status__c,&quot;Being Amended&quot;)), NOT(ISPICKVAL(AgreementId__r.Status__c,&quot;Being Renewed&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicator to amend the agreement</inlineHelpText>
        <label>Amend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CancelRequest__c</fullName>
        <description>Indicator to cancel the agreement request</description>
        <formula>AND(OR(ISPICKVAL(AgreementId__r.Status_Category__c,&quot;Request&quot;), ISPICKVAL(AgreementId__r.Status_Category__c,&quot;In Authoring&quot;), ISPICKVAL(AgreementId__r.Status_Category__c,&quot;In Signatures&quot;), ISPICKVAL(AgreementId__r.Status_Category__c,&quot;In Filing&quot;)),NOT(ISPICKVAL(AgreementId__r.Status__c,&quot;Cancelled Request&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicator to cancel the agreement request</inlineHelpText>
        <label>Cancel Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expire__c</fullName>
        <description>Indicator to expire the agreemen</description>
        <formula>OR(AND(ISPICKVAL(AgreementId__r.Status_Category__c,&quot;In Effect&quot;),NOT(ISPICKVAL(AgreementId__r.Status__c,&quot;Being Amended&quot;)), NOT(ISPICKVAL(AgreementId__r.Status__c,&quot;Being Renewed&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicator to expire the agreemen</inlineHelpText>
        <label>Expire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GenerateSupportingDocument__c</fullName>
        <description>Indicator to generate supporting documents for the agreement</description>
        <formula>True</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicator to generate supporting documents for the agreement</inlineHelpText>
        <label>Generate Supporting Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Generate__c</fullName>
        <description>Indicator to generate agreement documents</description>
        <formula>ISPICKVAL(AgreementId__r.Status_Category__c, &quot;Request&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicator to generate agreement documents</inlineHelpText>
        <label>Generate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ImportOfflineDocument__c</fullName>
        <description>Indicator to import offline documents</description>
        <formula>NOT(OR(ISPICKVAL(AgreementId__r.Status_Category__c, &quot;In Effect&quot;), ISPICKVAL(AgreementId__r.Status_Category__c, &quot;Expired&quot;),ISPICKVAL(AgreementId__r.Status_Category__c, &quot;Terminated&quot;),ISPICKVAL(AgreementId__r.Status_Category__c, &quot;Amended&quot;),ISPICKVAL(AgreementId__r.Status_Category__c, &quot;Cancelled&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicator to import offline documents</inlineHelpText>
        <label>Import Offline Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InitiateTermination__c</fullName>
        <description>Indicator to initiate termination of the agreement</description>
        <formula>OR(AND(ISPICKVAL(AgreementId__r.Status_Category__c,&quot;In Effect&quot;),NOT(ISPICKVAL(AgreementId__r.Status__c,&quot;Being Amended&quot;)), NOT(ISPICKVAL(AgreementId__r.Status__c,&quot;Being Renewed&quot;)),NOT(ISPICKVAL(AgreementId__r.Status__c,&quot;Being Terminated&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicator to initiate termination of the agreement</inlineHelpText>
        <label>Initiate Termination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preview__c</fullName>
        <formula>ISPICKVAL(AgreementId__r.Status_Category__c, &quot;Request&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preview</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regenerate__c</fullName>
        <description>Indicator to preview agreement documents</description>
        <formula>OR(ISPICKVAL(AgreementId__r.Status_Category__c,&quot;In Authoring&quot;), ISPICKVAL(AgreementId__r.Status_Category__c,&quot;In Signatures&quot;), ISPICKVAL(AgreementId__r.Status_Category__c,&quot;In Filing&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicator to preview agreement documents</inlineHelpText>
        <label>Regenerate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renew__c</fullName>
        <description>Indicator to renew the agreement</description>
        <formula>OR(AND((ISPICKVAL(AgreementId__r.Status_Category__c,&quot;In Effect&quot;)),NOT(ISPICKVAL(AgreementId__r.Status__c,&quot;Being Renewed&quot;)),NOT(ISPICKVAL(AgreementId__r.Status__c,&quot;Being Amended&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicator to renew the agreement</inlineHelpText>
        <label>Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReturnToRequestor__c</fullName>
        <description>Indicator to return the agreement back to requestor</description>
        <formula>ISPICKVAL(AgreementId__r.Status_Category__c,&quot;In Authoring&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicator to return the agreement back to requestor</inlineHelpText>
        <label>Return To Requestor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SendForReview__c</fullName>
        <description>Indicator to send agreement for review</description>
        <formula>OR(ISPICKVAL(AgreementId__r.Status_Category__c,&quot;In Signatures&quot;), ISPICKVAL(AgreementId__r.Status_Category__c,&quot;In Authoring&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicator to send agreement for review</inlineHelpText>
        <label>Send For Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SendForSignatures__c</fullName>
        <description>Indicator to send agreement for signatures</description>
        <formula>OR(ISPICKVAL(AgreementId__r.Status_Category__c,&quot;In Signatures&quot;), ISPICKVAL(AgreementId__r.Status_Category__c,&quot;In Authoring&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicator to send agreement for signatures</inlineHelpText>
        <label>Send For Signatures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubmitChanges__c</fullName>
        <description>Indicator to submit agreement changes</description>
        <formula>OR(AND(ISPICKVAL(AgreementId__r.Status_Category__c,&quot;In Authoring&quot;),ISPICKVAL(AgreementId__r.Source__c,&quot;Other Party Paper&quot;)),(ISPICKVAL(AgreementId__r.Status_Category__c,&quot;In Signatures&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicator to submit agreement changes</inlineHelpText>
        <label>Submit Changes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubmitRequest__c</fullName>
        <description>Indicator to submit agreement request</description>
        <formula>AND(ISPICKVAL(AgreementId__r.Status_Category__c,&quot;Request&quot;),OR(ISPICKVAL(AgreementId__r.Status__c,&quot;Request&quot;),ISPICKVAL(AgreementId__r.Status__c,&quot;In Amendment&quot;),ISPICKVAL(AgreementId__r.Status__c,&quot;In Renewal&quot;),ISPICKVAL(AgreementId__r.Status__c,&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicator to submit agreement request</inlineHelpText>
        <label>Submit Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Terminate__c</fullName>
        <description>Indicator to terminate the agreemen</description>
        <formula>OR(AND(ISPICKVAL(AgreementId__r.Status_Category__c,&quot;In Effect&quot;),NOT(ISPICKVAL(AgreementId__r.Status__c,&quot;Being Amended&quot;)), NOT(ISPICKVAL(AgreementId__r.Status__c,&quot;Being Renewed&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicator to terminate the agreemen</inlineHelpText>
        <label>Terminate</label>
        <type>Checkbox</type>
    </fields>
    <label>Agreement Action Condition</label>
    <nameField>
        <displayFormat>AC-{0000000000}</displayFormat>
        <label>Action Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Action Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>